# raki

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  raki.yaml  soda-system-prompt-4140959646.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
changes/: +report-positional.breaking  +threshold-warning.fix  101.fix  103.feature  104.fix  110.feature  112.feature  113.feature  114.feature  115.feature  116.feature  117.doc  131.fix  133.fix  136.fix  139.fix  150.breaking  152.doc  162.feature  169.fix  170.feature  171.feature  173.feature  174.feature  175.feature  176.fix  179.feature  183.fix  184.feature  186.feature  187.feature  194.feature  195.breaking  197.fix  207.feature  208.feature  218.fix  219.fix  220.feature  221.feature  (+25 more)
docs/: adapter-guide.md  ci-integration.md  comparing-runs.md  curation-guide.md  getting-started.md  index.md  interpretation-reference.md  interpreting-results.md  orchestrator-prompt.md  session-schema.md  soda-pipeline-gate.md
docs/examples/: ci-workflow-guide.md  github-actions-quality-gate.yml
docs/metrics/: analytical.md  knowledge.md  operational.md  rationale-and-interpretation.md
docs/soda/: README.md  phases.yaml  soda.yaml
docs/soda/prompts/: follow-up.md  implement.md  monitor.md  patch.md  plan.md  review-python.md  review-rag.md  review.md  submit.md  triage.md  verify.md
docs/soda/schemas/: implement.go  implement.json  monitor.go  monitor.json  patch.json  plan.go  plan.json  review.go  review.json  submit.go  submit.json  triage.go  triage.json  verify.go  verify.json
docs/specs/: docs-milestone.md  v0.2.1-critical-fixes.md  v0.3.0-report-cli-polish.md  v0.4.0-security-data-completeness.md  v0.5.0-understand-your-results.md
examples/: raki-alcove.yaml  raki-full.yaml  raki-minimal.yaml  soda-gate.yaml
examples/ground-truth/: curated.yaml
examples/reports/: raki-report-20260419T125123.html  raki-report-20260419T125123.json
examples/sessions/: alcove-session.json
examples/sessions/critical-findings/: _README.md  events.jsonl  implement.json  meta.json  review.json  triage.json  verify.json
examples/sessions/multi-reviewer/: _README.md  events.jsonl  implement.json  meta.json  review.json  triage.json  verify.json
examples/sessions/partial-failure/: _README.md  events.jsonl  implement.json  meta.json  triage.json
examples/sessions/pass-clean/: _README.md  events.jsonl  implement.json  meta.json  review.json  triage.json  verify.json
examples/sessions/rework-cycle/: _README.md  events.jsonl  implement.json  implement.json.1  meta.json  review.json  triage.json  verify.json
ground-truth/: curated.yaml
src/raki/: __main__.py  cli.py
src/raki/adapters/: __init__.py  alcove.py  alcove_pipeline.py  discovery.py  loader.py  protocol.py  redact.py  (+2 more)
tests/: conftest.py  test_adapters.py  test_alcove_pipeline.py  test_cli.py  test_dependencies.py  test_diff.py  test_discovery.py  test_docs_chunker.py  test_docs_rationale.py  test_example_ground_truth.py  test_example_manifests.py  test_example_sessions.py  test_file_prediction.py  test_gates.py  test_ground_truth.py  test_health.py  test_history.py  test_import_history.py  test_judge_cost.py  test_manifest.py  test_metrics_knowledge.py  test_metrics_operational.py  test_metrics_ragas.py  test_model.py  test_reaggregate.py  test_report.py  test_report_html.py  test_trends.py  test_triage_calibration.py
(+82 files in other folders)
