[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raki"
version = "0.7.0"
description = "Retrieval Assessment for Knowledge Impact — evaluate agentic RAG quality"
requires-python = ">=3.12"
license = "Apache-2.0"
readme = "README.md"

dependencies = [
    "click>=8.0",
    "pydantic>=2.0,<3.0",
    "rich>=13.7,<15",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ragas = [
    "ragas>=0.4,<0.5",
    "anthropic>=0.40",
    "google-auth>=2.0",
    "google-genai>=1.0",
    "langchain-google-vertexai>=2.0",
]
html = [
    "jinja2>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "towncrier>=24.8",
    "ty",
]
all = ["raki[ragas,html,dev]"]

[project.scripts]
raki = "raki.cli:main"

[tool.ruff]
line-length = 100

[tool.ty.environment]
python-version = "3.12"

[tool.towncrier]
package = "raki"
directory = "changes"
filename = "CHANGELOG.md"
title_format = "## [{version}] — {project_date}"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Internal Changes"
showcontent = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
markers = ["slow: marks tests requiring LLM calls"]
